- new branch - update gradle & lib

--- a/FoodApp/app/src/main/res/layout/layout_dangky.xml
+++ b/FoodApp/app/src/main/res/layout/layout_dangky.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -44,9 +44,10 @@
                 android:textColorHint="@color/colorGray"
                 android:padding="@dimen/size10dp"
                 android:layout_margin="@dimen/size10dp"
-                android:drawableLeft="@drawable/user"
+                android:drawableStart="@drawable/user"
                 android:drawablePadding="@dimen/size10dp"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                tools:ignore="Autofill,TextFields" />
 
             <EditText
                 android:id="@+id/edMatKhauDK"
@@ -57,7 +58,7 @@
                 android:textColorHint="@color/colorGray"
                 android:padding="@dimen/size10dp"
                 android:layout_margin="@dimen/size10dp"
-                android:drawableLeft="@drawable/password"
+                android:drawableStart="@drawable/password"
                 android:drawablePadding="@dimen/size10dp"
                 android:password="true"/>
 
@@ -85,7 +86,7 @@
             <Spinner
                 android:id="@+id/spinQuyen"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></Spinner>
+                android:layout_height="wrap_content" />
 
             <EditText
                 android:id="@+id/edNgaySinhDK"
@@ -96,7 +97,7 @@
                 android:textColorHint="@color/colorGray"
                 android:padding="@dimen/size10dp"
                 android:layout_margin="@dimen/size10dp"
-                android:drawableLeft="@drawable/calender"
+                android:drawableStart="@drawable/calender"
                 android:drawablePadding="@dimen/size10dp"/>
 
             <EditText
@@ -108,7 +109,7 @@
                 android:textColorHint="@color/colorGray"
                 android:padding="@dimen/size10dp"
                 android:layout_margin="@dimen/size10dp"
-                android:drawableLeft="@drawable/idcard"
+                android:drawableStart="@drawable/idcard"
                 android:drawablePadding="@dimen/size10dp"
                 android:numeric="integer"
                 android:maxLength="9"/>
@@ -142,4 +143,4 @@
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
