--- a/FoodApp/app/src/main/res/layout/layout_thanhtoan.xml
+++ b/FoodApp/app/src/main/res/layout/layout_thanhtoan.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/size10dp"
-        android:background="@color/colorBackground"
+        android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
         <TextView
@@ -19,7 +19,9 @@
             android:text="@string/tenmonan"
             android:layout_weight="1"
             android:textSize="@dimen/size18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textColor="@color/colorWhite"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -27,7 +29,9 @@
             android:text="@string/soluong"
             android:layout_weight="1"
             android:textSize="@dimen/size18sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textColor="@color/colorWhite"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -35,7 +39,9 @@
             android:text="@string/giatien"
             android:layout_weight="1"
             android:textSize="@dimen/size18sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textColor="@color/colorWhite"/>
     </LinearLayout>
 
     <GridView
@@ -50,9 +56,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tongcong"
-        android:layout_marginStart="@dimen/size10dp"
+        android:layout_marginEnd="@dimen/size10dp"
         android:textColor="@color/colorBlack"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_gravity="end"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,7 +73,8 @@
             android:text="@string/thanhtoan"
             android:background="@color/colorPrimary"
             android:layout_margin="@dimen/size10dp"
-            tools:ignore="ButtonStyle" />
+            tools:ignore="ButtonStyle"
+            android:textColor="@color/colorWhite"/>
 
         <Button
             android:id="@+id/btnThoatThanhToan"
@@ -76,6 +84,7 @@
             android:text="@string/thoat"
             android:background="@color/colorRed"
             android:layout_margin="@dimen/size10dp"
-            tools:ignore="ButtonStyle" />
+            tools:ignore="ButtonStyle"
+            android:textColor="@color/colorWhite"/>
     </LinearLayout>
 </LinearLayout>
